Update font decompile feature